# pico-fido-rs

./: Cargo.toml  Embed.toml  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: ctap.rs  keys.rs  main.rs  usb.rs
src/usb/: ctap.rs  hid.rs  mod.rs
