[package]
edition = "2021"
name = "pico-fido-rs"
version = "0.1.0"
authors = ["sawyer bristol <sawyerbristol@gmail.com>"]

[features]
default = ["rp2040_board"] # official non w board
rp2040_board = []

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.2.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }
embassy-futures = { version = "0.1.0" }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
usbd-hid = "0.8"

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
  "async-await",
  "cfg-target-has-atomic",
  "unstable",
] }


embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
# ctap-types = "0.3.0"
heapless = "0.8.0"

[profile.release]
debug = 2
